kubernetes-volumes/deployment.yaml
# Необходимо 
# - В манифесте deployment.yaml изменить спецификацию volume типа emptyDir, который монтируется в init и основной контейнер, на рус, созданный в предыдущем
# пункте 
# - В манифесте deployment.yaml добавить монтирование ранее созданного configMap как volume к основному контейнеру пода в директорию /homework/conf, так, чтобы
# его содержимое можно было получить, обратившись по url /conf/file


apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hw
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: hw
    spec:
      nodeSelector:
        homework: "true" 
      containers:
      - name: web-server
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: shared-data
          mountPath: /homework
        - name: config-volume
          mountPath: /homework/conf
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "rm /homework/index.html"] # удалять файл index.html из директории /homework основного контейнера, перед его завершением
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: shared-data
        persistentVolumeClaim:
          claimName: hw-pvc
      - name: config-volume
        configMap:
          name: hw-configmap
      - name: nginx-config-volume
        configMap:
          name: nginx-config
